[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "califorknia"
version = "2022.0.0"
description = "A simple 2D 8-bit sprite-based RPG game set in present day California, post-alien invasion."
readme = "README.md"
requires-python = ">=3.10.0"
license = { text = "MIT license" }
authors = [
    { name="Amos Chua" },
	{ name="Brandon Phu" }
]
maintainers = [
	{ name="Amos Chua" },
    { name="Brandon Phu" }
]
keywords = [
    "2d",
	"sprite",
	"rpg",
    "game",
	"pygame",
]
classifiers = [
	"Development Status :: 1 - Planning",
	"Intended Audience :: Developers",
	"Intended Audience :: Education",
	"Intended Audience :: End Users/Desktop"
	"Operating System :: OS Independent",
	"License :: OSI Approved :: MIT License",
	"Natural Language :: English",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Topic :: Games/Entertainment :: Role-Playing",
]
dependencies = [
    "pygame >= 2.1.2",
	"ruamel.yaml >= 0.17.21, < 18.0.0",
]
# Don't list test/packaging optional dependencies, since these are Git-side only 

[project.urls]
"Homepage" = "https://github.com/KOOKIIEStudios/Califorknia"
"Bug Tracker" = "https://github.com/KOOKIIEStudios/Califorknia/issues"
"Wiki" = "https://github.com/KOOKIIEStudios/Califorknia/wiki"
